# sierra-clone

./: .env.local.example  .gitignore  CLAUDE.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
agent-runtime/: .env.example  README.md  pyproject.toml  requirements.txt
agent-runtime/src/agent_runtime/: __init__.py  agent.py  api.py  models.py
agent-runtime/tests/: test_agent_e2e.py  test_api.py  test_generation.py  test_guardrails.py  test_ingestion.py  test_retrieval.py
app/: page.tsx  (+1 more)
backend/: .gitignore  pyproject.toml  requirements.txt
backend/docs/: account.md
backend/migrations/adp/: 001_initial_schema.sql
backend/migrations/channels/: 001_initial_schema.sql
backend/migrations/expert_answers/: 001_initial_schema.sql
backend/migrations/trust/: 001_initial_schema.sql
backend/migrations/voice/: 001_initial_schema.sql
backend/src/adp/: auth.py  config.py  database.py
backend/src/agent_runtime/: api.py  models.py
backend/src/backend/: main.py
backend/tests/: test_health.py
expert-answers/: .gitignore  pyproject.toml  requirements.txt
expert-answers/migrations/: 001_initial_schema.sql
expert-answers/tests/: test_articles.py  test_integration.py  test_resolutions.py
expert-answers/ui/: .env.local.example  package.json
trust/: .env.example  .gitignore  pyproject.toml  requirements.txt
trust/migrations/: 001_initial_schema.sql
trust/tests/: conftest.py  test_audit.py  test_check.py  test_injection.py  test_pii.py  test_rate_limiter.py  test_system.py
trust/ui/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+419 files in other folders)
