[project]
name = "agent-runtime"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
